fixed password error spacing on register form

--- a/frontend/src/app/components/authentication/register/register.component.scss
+++ b/frontend/src/app/components/authentication/register/register.component.scss
@@ -70,3 +70,7 @@ mat-checkbox {
     color: firebrick;
     font-size: 12px;
 }
+
+li {
+    line-height: 12px;
+}
